force-app/main/default/objects/eContacts__Drivers_License__c/eContacts__Drivers_License__c.object-meta.xml
<CustomObject>
    <label>Drivers License</label>
    <nameField>
        <displayFormat>DL-{0000}</displayFormat>
        <label>Drivers License Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Drivers Licenses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>