force-app/main/default/objects/eContacts__Drivers_License__c/fields/eContacts__All_Data__c.field-meta.xml
<CustomField>
    <fullName>eContacts__All_Data__c</fullName>
    <label>All Data</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>