force-app/main/default/objects/eContacts__Drivers_License__c/fields/eContacts__Birthdate__c.field-meta.xml
<CustomField>
    <fullName>eContacts__Birthdate__c</fullName>
    <label>Birthdate</label>
    <type>Date</type>
</CustomField>