force-app/main/default/objects/eContacts__Drivers_License__c/fields/eContacts__Contact__c.field-meta.xml
<CustomField>
    <fullName>eContacts__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Drivers Licenses</relationshipLabel>
    <relationshipName>Drivers_Licenses</relationshipName>
    <type>Lookup</type>
</CustomField>