force-app/main/default/objects/eContacts__Drivers_License__c/fields/eContacts__DL_Number__c.field-meta.xml
<CustomField>
    <fullName>eContacts__DL_Number__c</fullName>
    <label>DL Number</label>
    <length>200</length>
    <type>Text</type>
</CustomField>