force-app/main/default/objects/eContacts__Drivers_License__c/fields/eContacts__Expires__c.field-meta.xml
<CustomField>
    <fullName>eContacts__Expires__c</fullName>
    <label>Expires</label>
    <type>Date</type>
</CustomField>