force-app/main/default/objects/eContacts__Drivers_License__c/fields/eContacts__FirstName__c.field-meta.xml
<CustomField>
    <fullName>eContacts__FirstName__c</fullName>
    <label>First Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>