force-app/main/default/objects/eContacts__Drivers_License__c/fields/eContacts__Height__c.field-meta.xml
<CustomField>
    <fullName>eContacts__Height__c</fullName>
    <label>Height</label>
    <length>50</length>
    <type>Text</type>
</CustomField>