force-app/main/default/objects/eContacts__Drivers_License__c/fields/eContacts__Image__c.field-meta.xml
<CustomField>
    <fullName>eContacts__Image__c</fullName>
    <label>Image</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>