force-app/main/default/objects/eContacts__Drivers_License__c/fields/eContacts__Issued__c.field-meta.xml
<CustomField>
    <fullName>eContacts__Issued__c</fullName>
    <label>Issued</label>
    <type>Date</type>
</CustomField>