force-app/main/default/objects/eContacts__Drivers_License__c/fields/eContacts__LastName__c.field-meta.xml
<CustomField>
    <fullName>eContacts__LastName__c</fullName>
    <label>Last Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>