force-app/main/default/objects/eContacts__Drivers_License__c/fields/eContacts__MiddleName__c.field-meta.xml
<CustomField>
    <fullName>eContacts__MiddleName__c</fullName>
    <label>Middle Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>