force-app/main/default/objects/eContacts__Drivers_License__c/fields/eContacts__Restrictions__c.field-meta.xml
<CustomField>
    <fullName>eContacts__Restrictions__c</fullName>
    <label>Restrictions</label>
    <length>50</length>
    <type>Text</type>
</CustomField>