force-app/main/default/objects/eContacts__Drivers_License__c/fields/eContacts__Sex__c.field-meta.xml
<CustomField>
    <fullName>eContacts__Sex__c</fullName>
    <label>Sex</label>
    <length>25</length>
    <type>Text</type>
</CustomField>