force-app/main/default/objects/eContacts__Drivers_License__c/fields/eContacts__State__c.field-meta.xml
<CustomField>
    <fullName>eContacts__State__c</fullName>
    <label>State</label>
    <length>200</length>
    <type>Text</type>
</CustomField>