force-app/main/default/objects/eContacts__Drivers_License__c/fields/eContacts__Vehicle_Class__c.field-meta.xml
<CustomField>
    <fullName>eContacts__Vehicle_Class__c</fullName>
    <label>Vehicle Class</label>
    <length>50</length>
    <type>Text</type>
</CustomField>