force-app/main/default/objects/eContacts__Drivers_License__c/fields/eContacts__Weight__c.field-meta.xml
<CustomField>
    <fullName>eContacts__Weight__c</fullName>
    <label>Weight</label>
    <length>200</length>
    <type>Text</type>
</CustomField>